Closed Bug 1004194 Opened 10 years ago Closed 10 years ago

content/media/webrtc/MediaEngineDefault.cpp:25:24: fatal error: YuvStamper.h: No such file or directory (--disable-webrtc)

Categories

(Core :: WebRTC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32
Tracking Status
firefox31 --- fixed
firefox32 --- fixed

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

(Whiteboard: [qa-])

Attachments

(1 file, 1 obsolete file)

Attached patch fix (obsolete) — Splinter Review
Sparc, MIPS, AArch64, etc. and Solaris still default to --disable-webrtc. OpenBSD downstream also doesn't want WebRTC until PulseAudio dependency is excised (bug 911450 or bug 952828 comment 14).

In file included from content/media/webrtc/Unified_cpp_content_media_webrtc0.cpp:2:
content/media/webrtc/MediaEngineDefault.cpp:25:10: fatal error:
      'YuvStamper.h' file not found
#include "YuvStamper.h"
         ^
1 error generated.

http://buildbot.rhaalovely.net/builders/comm-central-amd64/builds/1078/steps/build/logs/stdio
Attachment #8415590 - Flags: review?(pkerr)
Attached patch fixSplinter Review
MOZ_WEBRTC_SIGNALING may one day disappear, so test MOZ_WEBRTC as well.
Attachment #8415590 - Attachment is obsolete: true
Attachment #8415590 - Flags: review?(pkerr)
Attachment #8415606 - Flags: review?(pkerr)
Comment on attachment 8415606 [details] [diff] [review]
fix

Review of attachment 8415606 [details] [diff] [review]:
-----------------------------------------------------------------

Stamping a timestamp into a fake video frame isn't dependent on signaling
Attachment #8415606 - Flags: review?(pkerr) → review-
Comment on attachment 8415606 [details] [diff] [review]
fix

Review of attachment 8415606 [details] [diff] [review]:
-----------------------------------------------------------------

r+ with nit: #ifdef MOZ_WEBRTC instead (we can't reasonably disable SIGNALING at this point; certainly not as a config - it should be removed)
Attachment #8415606 - Flags: review- → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/de07501e90b5
landed with DONTBUILD since it's non-default-config-only changes
Target Milestone: --- → mozilla32
https://hg.mozilla.org/mozilla-central/rev/de07501e90b5
Assignee: nobody → jbeich
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Comment on attachment 8415606 [details] [diff] [review]
fix

Grml. Much like 1004183, this also needs backport to aurora. Testing it here, and with the alternative to take the fix from 981780.

[Approval Request Comment]
Bug caused by (feature/regressing bug #): 970691
User impact if declined: failure to build m-a with --disable-webrtc
Testing completed (on m-c, etc.): yes
Risk to taking this patch (and alternatives if risky): maybe rendered moot by 981780 ?
String or IDL/UUID changes made by this patch: none
Attachment #8415606 - Flags: approval-mozilla-aurora?
for the record, the failure on aurora with --disable-webrtc:

/src/mozilla-aurora/content/media/webrtc/MediaEngineDefault.cpp:25:10: fatal error: 'YuvStamper.h' file not found
#include "YuvStamper.h"
         ^
1 error generated.
with only the fix for 981780 build fails, so both seem needed. retesting.
Attachment #8415606 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: