Bug 1004194 - Unbreak build with --disable-webrtc after bug 970691. r=jesup, a=sledru